# ai-fitness

./: .gitignore  README.md
ai-fitness-web-client-main/: .gitattributes  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  temp  前端README.md
ai-fitness-web-client-main/api/: realtime_store.py  urls.py  views.py
ai-fitness-web-client-main/config/: llm_rules.yaml  ros_config.py  ros_runtime.yaml  settings.py  urls.py
ai-fitness-web-client-main/pages/: models.py  views.py
ai-fitness-web-client-main/pages/migrations/: 0001_initial.py  0002_userfaceembedding.py  0003_userprofile_phone_avatar_trainingsession.py  0004_userprofile_birthdate.py
ai-fitness-web-client-main/pages/templates/: api_test.html  base.html  face_camera_test.html  home.html  live_monitoring.html
ai-fitness-web-client-main/services/: face_service.py  llm_service.py  llm_service.py.bak.test  tts_service.py
ai-fitness-web-client-main/tools/: mock_ros_injector.py
pose_dt/: Topic_Specification
pose_dt/install/: local_setup.sh  setup.sh
pose_dt/src/jumping_evaluator/: package.xml  setup.cfg  setup.py
pose_dt/src/jumping_evaluator/jumping_evaluator/: detector_node.py
pose_dt/src/pushup_evaluator/: setup.cfg  setup.py
pose_dt/src/squat_evaluator/: setup.py
pose_dt/src/squat_evaluator/squat_evaluator/: detector_node.py
pose_ws/records/: pose_record_20260512_202834.csv
pose_ws/src/pose_pkg/: package.xml  setup.cfg  setup.py
pose_ws/src/pose_pkg/pose_pkg/: cam.py  look.py  main.py  media.py  yolo.py
(+20 files in other folders)
